# event_tool

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  Integrating_libraries_with_Telegram_and_Discord_for_event_search_d47cd434_2026-03-18T01-05-43-172Z.txt  LICENSE  MIGRATION.md  QUICKSTART.md  README.md  auth_telegram.py  events.md  interlock.md  pyproject.toml  uc_guide.md
_ingest/manifests/: source.sha256  turns.json
agent/: original-model-signature.txt
agent/cache/qwen7b/qwen7b/: gops.csv  graph_nodes.json  original_graph_nodes.json  tensor_shape.json
docs/: browser_attempts.md  session_transcript.md  what_worked.md
ext/: extract_event_links.js
ext/uc_extension/: content.js  findings.md  manifest.json  package-lock.json  package.json
ext/uc_extension/src/: extension-entry.js
scripts/: benchmark_detection.py  browser_test.py  scrape_storybooks.py  train_code_classifier.py  train_dom_classifier.py
src/event_harvester/: __init__.py  __main__.py  _interlock_worker.py  analysis.py  app.py  classifier.py  cli.py  config.py  dedup.py  display.py  dom_classifier.py  eval_classifier.py  event_match.py  harvest.py  interlock.py  label.py  llm.py  llm_filter.py  obsidian.py  recruiter_score.py  report.py  reranker.py  server.py  ticktick.py  utils.py  watch.py  weights.py
src/event_harvester/cli/: __init__.py  __main__.py  dispatch.py  parse_helpers.py  parser.py
src/event_harvester/cli/commands/: __init__.py  classifier.py  harvest.py  recruiters.py  serve.py  watch.py  web.py
src/event_harvester/sources/: __init__.py  chromium_cache.py  discord.py  gmail.py  signal.py  telegram.py  uc_browser.py  web_fetch.py  web_session.py
tests/: conftest.py  test_analysis.py  test_cli_parser.py  test_config.py  test_discord.py  test_event_match.py  test_obsidian.py  test_recruiter_score.py  test_report.py  test_ticktick.py  test_uc_chatgpt.py  test_weights.py
